--- a/css/estilos.css
+++ b/css/estilos.css
@@ -133,8 +133,24 @@
     margin-top: 0;
 }
 
+
+/**Contacto**/
+
 .titulo_contacto {
     margin-top: 1.5em;
+}
+
+.mainContacto h1 {
+    margin: 2.8rem 0 1rem 0 !important;
+}
+
+.mainContacto h5 {
+    margin: 0;
+}
+
+.consulta {
+    margin: 2em;
+    padding-top: 7em;
 }
 
 .consulta textarea {
@@ -187,21 +203,196 @@
 }
 
 .sub_contacto {
-    padding-left: 28.4em;
+    padding-left: 0em !important;
+    padding-bottom: 1em !important;
     font-size: 1.5em;
-}
-
-.mainContacto {
-    background-image: url(https://i.ibb.co/jbMdDC2/fondo-Contacto.jpg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: 0em;
 }
 
 .logo_footer {
     height: 3.8em;
     margin-right: 5px;
     float: left;
+}
+
+
+/***ConoceComo***/
+
+.mainConoceComo {
+    margin-top: 5em;
+}
+
+.mainConoceComo .Conocebold {
+    font-weight: bold;
+}
+
+.mainConoceComo .descripcion {
+    padding: 1em;
+    width: 70%;
+}
+
+.mainConoceComo .tituloMaterial {
+    border-bottom: 4px #4caf50 solid;
+    max-width: 100%;
+}
+
+.mainConoceComo .row {
+    width: 90%;
+    margin: auto;
+}
+
+.mainConoceComo .row img {
+    border-bottom: 4px #4caf50 solid;
+}
+
+.ventajas {
+    text-align: center;
+}
+
+.ventajasBold {
+    color: #4caf50;
+    font-weight: bold;
+}
+
+.bold {
+    font-weight: bold!important;
+}
+
+.mi-imagen {
+    -webkit-filter: grayscale(100%);
+    filter: blur(3px);
+}
+
+.ventajasInfo {
+    display: flex;
+    justify-content: space-between!important;
+}
+
+.ventajasInfo .center i {
+    font-size: 30px;
+}
+
+.ventajasInfo p {
+    font-size: larger;
+}
+
+.ventajasInfo .m-2 {
+    margin: 0.5em;
+    width: 300px!important;
+    padding: 1em!important;
+}
+
+.p-2 {
+    padding: 2em;
+}
+
+.bordeH5 {
+    border-bottom: 4px #4caf50 solid;
+}
+
+.añoss {
+    padding: 1em;
+}
+
+.mt-2 {
+    margin-top: 1em!important;
+}
+
+.mt-1 {
+    margin-top: 5em!important;
+}
+
+.botonDescompo {
+    width: 175px!important;
+    max-width: 100%!important;
+    margin: auto;
+    display: block!important;
+}
+
+.responsive-h3 {
+    max-width: 100%;
+}
+
+@media only screen and (max-width: 425px) {
+    .mainConoceComo .tituloMaterial {
+        font-size: 2em;
+    }
+    .mainConoceComo .descripcion {
+        text-align: justify;
+        font-size: 1.4em;
+        width: 100%;
+    }
+    .mainConoceComo .row {
+        border: 0;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .mainConoceComo .tituloMaterial {
+        font-size: 2.4em;
+    }
+    .mainConoceComo .descripcion {
+        text-align: justify;
+        font-size: 1.4em;
+        width: 100%;
+    }
+    .mainConoceComo .row {
+        border: 0;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .m8 {
+        width: 50%!important;
+    }
+    .m4 {
+        width: 50%!important;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .mainConoceComo .tituloMaterial {
+        font-size: 2.3em;
+    }
+    .mainConoceComo .descripcion {
+        text-align: justify;
+        font-size: 1.4em;
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 770px) {
+    .m8 {
+        width: 66.6666666667%!important;
+    }
+    .m4 {
+        width: 33.333333333%!important;
+    }
+    .grafico {
+        width: 60%;
+    }
+}
+
+@media only screen and (max-width: 1920px) {
+    .mainConoceComo .tituloMaterial {
+        font-size: 2em;
+    }
+    .mainConoceComo .descripcion {
+        text-align: justify;
+        font-size: 1.4em;
+        margin: 0;
+    }
+}
+
+@media only screen and (max-width: 2880px) {
+    .mainConoceComo .tituloMaterial {
+        font-size: 2.3em;
+    }
+    .mainConoceComo .descripcion {
+        text-align: justify;
+        font-size: 1.4em;
+        width: 100%;
+        margin: 0;
+    }
 }
 
 
@@ -287,12 +478,6 @@ footer.page-footer {
     }
     .consulta {
         color: white;
-    }
-    .mainContacto {
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-position: 0em;
-        background-position-y: 11em;
     }
     .titulo_Slider {
         font-size: 5em;
@@ -420,11 +605,8 @@ footer.page-footer {
         margin-top: 24px;
         font-size: 1.2em;
     }
-    .mainContacto {
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-position: 0em;
-        background-position-y: 24em;
+    .parallax-container .parallax img {
+        left: 70% !important;
     }
 }
 
@@ -444,9 +626,6 @@ footer.page-footer {
     }
     .sub_contacto {
         padding-left: 1em;
-    }
-    .mainContacto {
-        background-position-y: 47em;
     }
     .tituloCombos {
         font-size: 34px;
@@ -469,6 +648,9 @@ footer.page-footer {
     }
     .combos_Informacion p {
         margin-top: 24px;
+    }
+    .parallax-container .parallax img {
+        left: 110%!important;
     }
 }
 
@@ -494,6 +676,9 @@ footer.page-footer {
     .combos_Informacion p {
         margin-top: 14px;
     }
+    .parallax-container .parallax img {
+        left: 120%!important;
+    }
 }
 
 @media only screen and (max-width: 320px) {
@@ -506,9 +691,6 @@ footer.page-footer {
     }
     .sub_contacto {
         font-size: 1.2em;
-    }
-    .mainContacto {
-        background-position-y: 50em;
     }
     .tituloCombos {
         font-size: 26px;
@@ -532,68 +714,69 @@ footer.page-footer {
     .combos_Informacion p {
         margin-top: 11px;
     }
+    .parallax-container .parallax img {
+        left: 140%!important;
+    }
 }
+
 
 /******Productos******/
-.mainProductos{
+
+.mainProductos {
     position: relative;
-    top:80px;
+    top: 80px;
 }
 
-    #barraCategorias{
-        background-color: white;
-        border-radius: 0em;
-        font-size: 2.5em;
-        font-weight: bold;
-
-
+#barraCategorias {
+    background-color: white;
+    border-radius: 0em;
+    font-size: 2.5em;
+    font-weight: bold;
 }
-    .objetoCategorias{
-        font-size: 0.6em;
-    }
+
+.objetoCategorias {
+    font-size: 0.6em;
+}
 
 .no-shadows {
     box-shadow: none!important;
 }
-    #miCuenta{
-        color: white;
-        background-color: #389a4f;
-        position: relative;
-        bottom: 5px;
-    }
-    #footerProductos{
-        position: relative;
 
-    }
-    #filtros{
-        border-radius: 0.7em;
-        width: 290px;
-        height: 330px;
-        font-size: 1.2em;
-        position: relative;
-        left: 2%;
-        top: 40px;
+#miCuenta {
+    color: white;
+    background-color: #389a4f;
+    position: relative;
+    bottom: 5px;
+}
 
+#filtros {
+    border-radius: 0.7em;
+    width: 290px;
+    height: 330px;
+    font-size: 1.2em;
+    position: relative;
+    left: 2%;
+    top: 40px;
+}
 
-
-    }
-
-#todosLosProductos{
+#todosLosProductos {
     width: 100%;
     color: white;
     text-decoration: underline;
     font-weight: bold;
-
 }
-#botonMasBuscados, #botonEnvioGratis, #botonMenorPrecio, #botonMayorPrecio, #botonCombos{
 
+#botonMasBuscados,
+#botonEnvioGratis,
+#botonMenorPrecio,
+#botonMayorPrecio,
+#botonCombos {
     background-color: #389a4f;
     width: 260px;
     text-align: center;
-
-
 }
-#filtroPrecio{
+
+#filtroPrecio {
     color: black;
     font-weight: bold;
     position: relative;
@@ -602,148 +785,178 @@ footer.page-footer {
     width: 17%;
     left: 0.6%;
 }
-#precio{
+
+#precio {
     font-size: 1.5em;
     text-decoration: underline;
     text-decoration-color: #389a4f;
     text-decoration-width: 10em;
     position: relative;
     left: 5%;
-
 }
-#rango{
+
+#rango {
     width: 120%;
     position: relative;
     left: 8%;
 }
-#guion{
+
+#guion {
     font-size: 2em;
 }
-#precioMax{
-    width: 110px;
 
-}
-#precioMin{
+#precioMax {
     width: 110px;
-
 }
-#inputMin, #inputMax{
+
+#precioMin {
+    width: 110px;
+}
+
+#inputMin,
+#inputMax {
     box-shadow: none;
-    border:none;
+    border: none;
     border-bottom: none;
 }
-#botonAplicarFiltro{
+
+#botonAplicarFiltro {
     background-color: #389a4f;
     width: 300px;
     position: absolute;
     left: 7%;
 }
-.objetoCatalogo{
-    width: 55%;
 
+.objetoCatalogo {
+    width: 55%;
 }
 
-.precioCatalogo{
+.precioCatalogo {
     position: relative;
     bottom: 47px;
 }
-.catalogo{
+
+.catalogo {
     position: relative;
     bottom: 467px;
     left: 6%;
     width: 93%;
 }
-.fotoCatalogo{
+
+.fotoCatalogo {
     width: 250px;
     height: 230px;
-
 }
-.productosRecomendados{
+
+.productosRecomendados {
     position: relative;
     bottom: 450px;
 }
-.objetosRecomendados{
+
+.objetosRecomendados {
     position: relative;
     bottom: 350px;
 }
-.pagination{
+
+.pagination {
     position: relative;
     bottom: 240px;
 }
-@media only screen and (max-width: 1330px) {
 
-    .divFiltros{
+@media only screen and (max-width: 1330px) {
+    .divFiltros {
         position: relative;
         bottom: 400px;
     }
-
-    #filtroPrecio{
-    position: absolute;
-    bottom: 300px;
-    left: 500px;
-}
-    #rango{
+    #filtroPrecio {
+        position: absolute;
+        bottom: 300px;
+        left: 500px;
+    }
+    #rango {
         width: 400px;
     }
-    .catalogo{
+    .catalogo {
         position: relative;
         top: 50px;
         width: 700px;
     }
-    .objetoCatalogo{
+    .objetoCatalogo {
         width: 100%;
     }
+}
 
 
-    /* Ivan */
+/* Ivan */
 
-    .tituloPag{
-        display: flex;
-        justify-content: center;
-    }
-    
-    .tituloPag h4{
-        margin-top: 50px;
-        margin-bottom: 20px;
-        margin-left: 10px;
-    }
-    
-    .parteArriba{
-        display: flex;
-        justify-content: center;
-    }
-    
-    .parteArriba img{
-        width: 600px;
-        height: 500px;
-    }
-    
-    .parteAbajo{
-        margin-top: 50px;
-        margin-bottom: 30px;
-        display: flex;
-        justify-content: space-around;
-    }
-    
-    .provincias{
-        background-color: #389a4f;
-        color: cornsilk;
-        padding: 6px;
-    }
-    
-    .parteArriba i{
-        margin-left: 40px;
-        margin-right: 40px;
-        color: #389a4f;
-        position: relative;
-        top: 250px;
-        
-    }
-    
-    .parteAbajoDerecha i{
-     position: relative;
-     bottom: -42px;
-     right: 25px;
-     color: #389a4f;
-    }
-    
+.tituloPag {
+    display: flex;
+    justify-content: center;
+}
+
+.tituloPag h4 {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    margin-left: 10px;
+}
+
+.parteArriba {
+    display: flex;
+    justify-content: center;
+}
+
+.parteArriba img {
+    width: 600px;
+    height: 500px;
+}
+
+.parteAbajo {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.provincias {
+    background-color: #389a4f;
+    color: cornsilk;
+    padding: 6px;
+}
+
+.parteArriba i {
+    margin-left: 40px;
+    margin-right: 40px;
+    color: #389a4f;
+    position: relative;
+    top: 250px;
+}
+
+.parteAbajoDerecha i {
+    position: relative;
+    bottom: -42px;
+    right: 25px;
+    color: #389a4f;
+}
+
+.parteAbajoDerecha p {
+    margin-bottom: -10px;
+}
+
+.parteAbajoDerecha {
+    margin-left: 70px;
+    margin-top: -28px;
+}
+
+.contenedorAbajo {
+    display: flex;
+}
+
+.contenedor-izquierda {
+    margin-left: 40px;
+}
+
+.divMapa {
+    margin-right: 80px;
+    margin-top: 70px;
+    margin-bottom: 80px;
+}
