--- a/css/estilos.css
+++ b/css/estilos.css
@@ -789,48 +789,48 @@ footer.page-footer {
 /******Productos******/
 
 .carritoCompras {
-  margin-top: 0.7em;
-  margin-bottom: 0.7em;
+    margin-top: 0.7em;
+    margin-bottom: 0.7em;
 }
 
 #barraCategorias {
-  background-color: transparent;
-  border-radius: 0em;
-  font-size: 2.5em;
-  font-weight: bold;
-  position: relative;
-  top: 90px;
+    background-color: transparent;
+    border-radius: 0em;
+    font-size: 2.5em;
+    font-weight: bold;
+    position: relative;
+    top: 90px;
 }
 
 .objetoCategorias {
-  font-size: 0.6em;
+    font-size: 0.6em;
 }
 
 .no-shadows {
-  box-shadow: none !important;
+    box-shadow: none !important;
 }
 
 #miCuenta {
-  color: white;
-  background-color: #389a4f;
-  position: relative;
-  bottom: 5px;
+    color: white;
+    background-color: #389a4f;
+    position: relative;
+    bottom: 5px;
 }
 
 #footerProductos {
-  position: relative;
+    position: relative;
 }
 
 #filtros {
-  border-radius: 0.7em;
-  height: 330px;
-  font-size: 1.2em;
+    border-radius: 0.7em;
+    height: 330px;
+    font-size: 1.2em;
 }
 
 #todosLosProductos {
-  color: black;
-  font-weight: bold;
-  font-size: 1.3em;
+    color: black;
+    font-weight: bold;
+    font-size: 1.3em;
 }
 
 #botonMasBuscados,
@@ -838,79 +838,79 @@ footer.page-footer {
 #botonMenorPrecio,
 #botonMayorPrecio,
 #botonCombos {
-  background-color: whitesmoke;
-  color: #389a4f;
-  font-weight: bold;
-  width: 260px;
-  text-align: center;
-  max-width: 100%;
+    background-color: whitesmoke;
+    color: #389a4f;
+    font-weight: bold;
+    width: 260px;
+    text-align: center;
+    max-width: 100%;
 }
 
 #filtroPrecio {
-  color: black;
-  font-weight: bold;
-  border: 0px none;
+    color: black;
+    font-weight: bold;
+    border: 0px none;
 }
 
 #precio {
-  font-size: 1.5em;
+    font-size: 1.5em;
 }
 
 #rango {
-  justify-content: center;
+    justify-content: center;
 }
 
 #guion {
-  font-size: 2em;
-  margin: auto;
+    font-size: 2em;
+    margin: auto;
 }
 
 #guion span {
-  margin: auto;
+    margin: auto;
 }
 
 #precioMax {
-  background-color: white;
-  color: #000;
+    background-color: white;
+    color: #000;
 }
 
 #precioMin {
-  color: black;
+    color: black;
 }
 
 #inputMin,
 #inputMax {
-  border-radius: 0em;
-  color: black;
-  border-color: #389a4f;
+    border-radius: 0em;
+    color: black;
+    border-color: #389a4f;
 }
 
 #botonAplicarFiltro {
-  background-color: #389a4f;
-  width: 300px;
-  max-width: 100%;
+    background-color: #389a4f;
+    width: 300px;
+    max-width: 100%;
 }
 
 .objetoCatalogo {
-  width: 95%;
-  margin: auto !important;
+    width: 95%;
+    margin: auto !important;
 }
 
 .objetoCatalogo .card {
-  height: 466px;
-  max-height: 100%;
+    height: 466px;
+    max-height: 100%;
 }
 
 .precioCatalogo {
-  font-size: 1vw;
-  padding: 0.1em;
+    font-size: 1vw;
+    padding: 0.1em;
 }
 
 .fotoCatalogo {
-  width: 250px !important;
-  height: 230px !important;
-  max-width: 100% !important;
-  max-height: 100% !important;
+    width: 250px !important;
+    height: 230px !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
 }
 
 
@@ -927,16 +927,6 @@ footer.page-footer {
     margin-left: 10px;
 }
 
-.parteArriba {
-    display: flex;
-    justify-content: center;
-}
-
-.parteArriba img {
-    width: 600px;
-    height: 500px;
-}
-
 .parteAbajo {
     margin-top: 50px;
     margin-bottom: 30px;
@@ -950,21 +940,6 @@ footer.page-footer {
     padding: 6px;
 }
 
-.parteArriba i {
-    margin-left: 40px;
-    margin-right: 40px;
-    color: #389a4f;
-    position: relative;
-    top: 250px;
-}
-
-.parteAbajoDerecha i {
-    position: relative;
-    bottom: -42px;
-    right: 25px;
-    color: #389a4f;
-}
-
 .parteAbajoDerecha p {
     margin-bottom: -10px;
 }
@@ -974,50 +949,49 @@ footer.page-footer {
     margin-top: -28px;
 }
 
-.contenedorAbajo {
-    display: flex;
-}
-
-.contenedor-izquierda {
-    margin-left: 40px;
-}
-
 .divMapa {
-    margin-right: 80px;
     margin-top: 100px;
     margin-bottom: 80px;
 }
 
-.divMapa a {
-    position: relative;
-    bottom: 35px;
-    width: 100px;
+.divMapa iframe {
+    max-width: 100%;
 }
+
+.divMapa .row a {
+    margin: 5px;
+}
+
 
 /* Detalle */
 
 #descripcion {
-  font-weight: bold;
+    font-weight: bold;
 }
+
 #precioDetalle {
-  font-size: 3em;
-  font-weight: lighter;
+    font-size: 3em;
+    font-weight: lighter;
 }
+
 #envioDetalle {
-  font-size: 1.3em;
-  position: relative;
-  top: 22px;
+    font-size: 1.3em;
+    position: relative;
+    top: 22px;
 }
+
 #envioIcono {
-  position: relative;
-  top: 5px;
+    position: relative;
+    top: 5px;
 }
+
 #inputCantidad {
-  border-radius: 0em;
-  color: black;
-  border-color: #389a4f;
-  width: 100%;
+    border-radius: 0em;
+    color: black;
+    border-color: #389a4f;
+    width: 100%;
 }
+
 .imagenDetalle {
-  width: 3%;
+    width: 3%;
 }
